# GoIT_Web2_HW7

./: config.ini  main.py  pyproject.toml  seed.py
alembic/versions/: 2c9c371129b0_init.py
src/: db.py  db_connect.py  models.py
